# ephemeral-linear-data

./: .gitignore  LICENSE  README.md  cabal.project  ephemeral-linear-data.cabal  hie.yaml
spec/Data/Queue/: EphemeralSpec.hs
src/Control/Monad/Trans/Cont/: Linear.hs
src/Data/Queue/: Ephemeral.hs
