cabal-version:      2.4
name:               ephemeral-linear-data
version:            0.1.0.0

-- synopsis:
-- description:
license: NONE
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

library
  exposed-modules:  Data.Queue.Ephemeral
  hs-source-dirs:   src
  build-depends:    base,
                    linear-base
  ghc-options:      -Wall
                    -Wcompat
  default-language: Haskell2010
