cabal-version:      2.4
name:               ephemeral-linear-data
version:            0.1.0.0

-- synopsis:
-- description:
license: Apache-2.0
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

library
  exposed-modules:  Control.Monad.Trans.Cont.Linear
                    Data.Queue.Ephemeral
  hs-source-dirs:   src
  build-depends:    base,
                    linear-base
  ghc-options:      -Wall
                    -Wcompat
                    -Wno-name-shadowing
  default-language: Haskell2010
