cabal-version:      2.4
name:               ephemeral-linear-data
version:            0.1.0.0

-- synopsis:
-- description:
license: Apache-2.0
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
-- extra-source-files:

common common
  build-depends:    base,
                    linear-base
  ghc-options:      -Wall
                    -Wcompat
                    -Wno-name-shadowing
  default-language: Haskell2010

library
  import: common
  exposed-modules:  Control.Monad.Trans.Cont.Linear
                    Data.Queue.Ephemeral
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite spec
  import:             common
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     spec
  other-modules:      Data.Queue.EphemeralSpec
  build-depends:      ephemeral-linear-data,
                      hspec
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover
